test/semantic/error/err_06_proc_as_var.pl0
program procAsVar;
procedure p(); begin end;
begin
  p := 1; { Error: p is a procedure }
end